# 3A04-Project

./: .gitattributes  .gitignore  Procfile  README.md  agents.py  app.json  audio.py  audioAPI.py  audioAgent.py  audioAnalyzer.py  audioModel.py  blackboard.py  blackboardkeys.py  data.py  description.py  descriptionAnalyzer.py  descriptionFinder.py  lyricAnalyzer.py  lyricalFinder.py  lyrics.py  model.py  naturalLanguageProcessor.py  package-lock.json  package.json  requirements.txt  song.py  songIdentifier.py  tsconfig.json
.github/: README.md
.github/workflows/: ci.yml  release.yml  tauri-build.yml
app/: _layout.tsx  index.tsx
app/screens/: AudioInput.tsx  DescriptionInput.tsx  LyricInput.tsx
backend/: .bentoignore  .gitignore  Makefile  README.md  agents.py  artistBasedRecommender.py  audio.py  audioAPI.py  audioAnalyzer.py  audioModel.py  blackboard.py  blackboardkeys.py  configurations.py  controller.py  description.py  descriptionAnalyzer.py  firestoreReportRepository.py  lyricAnalyzer.py  lyricalFinder.py  lyrics.py  models.py  naturalLanguageProcessor.py  pyproject.toml  reportGenerator.py  reportRepository.py  requirements.txt  service.py  song.py  songIdentifier.py  songRecommender.py  textModel.py
backend/agents/: __init__.py  audio.py  base.py  description.py  lyrics.py
backend/database/: databaseRepository.py
backend/generators/: reportGenerator.py
backend/libs/: __init__.py
backend/models/: __init__.py  modality.py  protocol.py  report.py  songIdentificationReport.py
backend/reportModels/: songIdentificationReport.py
backend/repositories/: firestoreReportRepository.py
frontend/src/: App.css  App.tsx
songsnap-mobile/: .gitignore  app.json  package-lock.json  package.json
songsnap-mobile/app/(tabs)/: _layout.tsx  index.tsx
songsnap-mobile/src-tauri/: tauri.conf.json
